// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductIDNotification should render correctly when payment option is \`contributions\` 1`] = `
<div>
  <section
    id="rrm-product-id-notification"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-subtle-notification googlesitekit-subtle-notification--new-feature mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-12"
        >
          <div
            class="googlesitekit-subtle-notification__icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-subtle-notification__content"
          >
            <p />
            <p
              class="googlesitekit-subtle-notification__secondary_description"
            >
              New! You can now select product IDs to use with your Reader Revenue Manager snippet
            </p>
          </div>
          <div
            class="googlesitekit-subtle-notification__action"
          >
            <button
              class="mdc-button mdc-button--tertiary"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Got it
              </span>
            </button>
            <a
              class="mdc-button googlesitekit-subtle-notification__cta mdc-button--raised"
              href="undefined#connected-services/reader-revenue-manager"
              role="button"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Edit settings
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ProductIDNotification should render correctly when payment option is \`subscriptions\` 1`] = `
<div>
  <section
    id="rrm-product-id-notification"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-subtle-notification googlesitekit-subtle-notification--warning mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-12"
        >
          <div
            class="googlesitekit-subtle-notification__icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-subtle-notification__content"
          >
            <p />
            <p
              class="googlesitekit-subtle-notification__secondary_description"
            >
              To complete your Reader Revenue Manager paywall setup, add your product IDs in settings
            </p>
          </div>
          <div
            class="googlesitekit-subtle-notification__action"
          >
            <button
              class="mdc-button mdc-button--tertiary"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Got it
              </span>
            </button>
            <a
              class="mdc-button googlesitekit-subtle-notification__cta mdc-button--raised"
              href="undefined#connected-services/reader-revenue-manager"
              role="button"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Edit settings
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
